# Origins-Of-Life

./: .gitignore  OriginsKahlerEulerBerry.py  README  README.md  ciel0-cosmic-intelligence-essay.md  run_enceladus_titan_2025.py
.github/: FUNDING.yml
archive/canon/cards/: NOEMA_CANON_NOEMA_ORIGINS.noema.card.json
archive/docs/: 01_scope_and_context.md  02_theoretical_framework.md  03_computational_model.md  04_chronological_evolution.md  05_results_analysis.md  06_canon_solver_structure.md  07_semantic_closure_problem.md  08_archive_inventory.md  09_conclusions.md  INDEX.md
archive/latex/: canon_paper.tex
archive/new holonomy/: originsHolo1  originsphaseholoext.py
archive/pre_versioning/: OriginOfLife.v2.0.py
archive/spectrum.zip (1)_FILES/: ciel0_cmb_analyzer_english.py
archive/versions/01_versions/origins_planetary_biology_app/origins_planetary_biology_app/: pyproject.toml
archive/versions/01_versions/origins_planetary_biology_app/origins_planetary_biology_app/results/: smoke_summary.json
docs/: REPO_POSITIONING_AND_ADOPTION.md
new holonomy/: originsHolo2.py
origins/: catalog.py  scenarios.py
origins/abiogenesis/: __init__.py  api.py
origins/analysis/: api.py
origins/orbital/: bundle_builder.py  potentials.py  repository_assignment.py  state.py  subjective_time.py
origins/simulator/: api.py  universal.py  universal_orbital.py
origins/topology/: fields.py
scripts/: run_analysis_native_orbital.py  run_cmb_analysis.py
spectrum.zip (1)_FILES/ciel-cmb-analyzer.zip/: style.css
src/origin_of_life/: registry.py
(+162 files in other folders)
