[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "origins-planetary-biology-app"
version = "0.1.0"
description = "Mini repo for planetary first-biology simulations"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["origins*"]
